--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     implementation "com.vk:androidsdk:2.1.1"
 
     implementation 'id.zelory:compressor:2.1.0'
+
+    implementation 'com.google.android.gms:play-services-ads:18.3.0'
 }
