--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -61,4 +62,6 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
 
     implementation 'com.google.android.gms:play-services-ads:18.3.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
