--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ repositories {
     mavenCentral()
     google()
     maven { url 'https://dl.bintray.com/yandex-money/maven' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -71,4 +72,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
 }
